algunos cambios en el css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <!-- para navegar en la pagina -->
             <ul class="navbar">
-                <li><a href="#"  class="">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Quien Soy</a></li>
                 <li><a href="#">Portafolio</a></li>
                 <li><a href="#">Contacto</a></li>
@@ -34,7 +34,7 @@
             </div>
     </section>
     
-    <section>
+    <section class="section-2">
             <h3>Periodismo</h3>
             <h3>Redaccion SEO</h3>
             <h3>Copywriting</h3>
